# symparse

./: .coverage  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml  run_logs.txt  run_schema.json  test_agent_skills.py
.github/workflows/: ci.yml  publish.yml
benchmarks/: run_benchmark.py  run_examples.py
examples/: invoice_schema.json  jsonl_schema.json  kubernetes_schema.json  login_schema.json  nginx_schema.json
scripts/: record_demo.py
symparse/: __init__.py  ai_client.py  cache_manager.py  cli.py  compiler.py  demo.py  engine.py  utils.py  validator.py
tests/: test_ai_client.py  test_cache_manager.py  test_cli.py  test_compiler.py  test_e2e.py  test_engine.py  test_engine_routing.py  test_utils.py  test_validator.py
