[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "symparse"
version = "0.1.1"
description = "Self-optimizing Unix pipeline tool with neurosymbolic parsing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jsonschema==4.23.0",
    "openai==1.61.0",
    "google-re2==1.0.0"
]
classifiers = [
    "Environment :: Console",
    "Topic :: Text Processing",
    "License :: OSI Approved :: MIT License",
]

[project.scripts]
symparse = "symparse.cli:main"

[project.optional-dependencies]
embed = ["sentence-transformers>=2.2.2"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
